@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-vcs-23.3.9999.ebuild 10895 RMD160 bdfb1aa63b08bd6b7ef2a17dfa5bd275514234ee SHA1 8627f8eb7e9aca67952d3bf5eab9b99b08915232 SHA256 74f8e15f8ae45c64154330585b139600f537ee5398c35b78b6f01c4b69c40fa4
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 11229 RMD160 327d5d7fbaca12452ec3a63140867ac943a04ada SHA1 fc52886699f664d787df3504c6e7ba216d553867 SHA256 c268753468038c30bdb7b929132e83be3fa4a2aad151fe051f81f04f9876b832
-MISC ChangeLog 3891 RMD160 5af693798fe6e857bea9555b708e973a4ad550cb SHA1 1f119bce3470067e372c6c044aea50470930c1d2 SHA256 6dc2c6696990ff36a636b72ed9650e630158e36c6d85092aa98d5753901d375b
+EBUILD emacs-vcs-23.3.9999.ebuild 10637 RMD160 ddc6f5710126cbba2cb35910a0673453c12cd6c1 SHA1 32a7e336cda6dc2e980f0e13d81d82f6b900c056 SHA256 04cdc414b68174e7d39f48939ee4243985e91fc1c90fe2ad5a3feab8e57ba557
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10971 RMD160 a735bba6a8135d611b7f31de8a4a5d789b89d054 SHA1 031cfbdc831651d0d0b8ce1634d708bd9fb950ad SHA256 87f51ac36f38b61ce65afd23b2056dbd7755adfb6180c144b54e9349d7d28387
+MISC ChangeLog 4027 RMD160 3e633b7ccfc1d585b60b5e9399288129c30f68ca SHA1 d9be21130af952394fb4cfa8ddef0842469f9c40 SHA256 e446372365866860d973c61f2d7ecf5d4f5222d2f307234e4d2c2b27c3a9bd0d
 MISC metadata.xml 2106 RMD160 be033c20ddf8d50f045e59552c1cccd3ce829149 SHA1 7e92f2fc679fade0f4b3a4c3d587a6ec8757437d SHA256 ae9bc43d98770006a0792f92b173911e1357135f82f33156f121206f51948e65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk5hCC8ACgkQOeoy/oIi7uza+QCgxv/kp90nF+w5qP1pmARNWVYz
-T38AoN4yhb/zqpbYabmPtzAVtzCupaSV
-=4z87
+iEYEARECAAYFAk5hCTYACgkQOeoy/oIi7uyjIACdHEyH7l+awEynbs0i2z/2rM+g
+nhUAoM7XcxX/nMhBLMRADVqhkeSSlHzl
+=01WI
 -----END PGP SIGNATURE-----
