@@ -85,15 +85,6 @@ RDEPEND="${RDEPEND}
 EMACS_SUFFIX="emacs-${SLOT}"
 SITEFILE="20${PN}-${SLOT}-gentoo.el"
 
-pkg_setup() {
-	local olddir="${EBZR_STORE_DIR}/emacs-${EBZR_BRANCH#emacs-}"
-	if [ -d "${olddir}" ]; then
-		ewarn "bzr.eclass uses branches instead of checkouts now."
-		ewarn "Therefore, you may remove the old bzr checkout:"
-		ewarn "rm -rf ${olddir}"
-	fi
-}
-
 src_prepare() {
 	if [ "${PV##*.}" = "9999" ]; then
 		FULL_VERSION=$(sed -n 's/^AC_INIT(emacs,[ \t]*\([^ \t,)]*\).*/\1/p' \
