@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Sep 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
+  emacs-vcs-24.0.9999-r1.ebuild:
+  Remove outdated warning.
+
   19 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
   emacs-vcs-24.0.9999-r1.ebuild:
   Record bzr branch and revision in the binary.
